docs/tests/parser/concurrency/valid/CriticalNested.src
fn void test() {
    critical {
        critical {
            x++;
        }
    }
}
