docs/tests/parser/concurrency/invalid/CriticalWithParen.src
fn void test() {
    critical (x) {
    }
}
